fix: webview selected autocomplete highlight is low contrast (#49)

--- a/media/scss/_suggest.scss
+++ b/media/scss/_suggest.scss
@@ -71,6 +71,10 @@
 	&--active {
 		background-color: var(--vscode-editorSuggestWidget-selectedBackground) !important;
 		color: var(--vscode-editorSuggestWidget-selectedForeground) !important;
+
+		> .suggest__highlight {
+			color: var(--vscode-editorSuggestWidget-focusHighlightForeground) !important;
+		}
 	}
 }
 
